reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__defs__eat.rs_line_22_col_5_001.log

*** crates/tracewake-core/src/actions/defs/eat.rs:22:5: replace build_eat_events -> Result<Vec<EventEnvelope>, ActionRejection> with Ok(vec![Default::default()])

*** mutation diff:
--- crates/tracewake-core/src/actions/defs/eat.rs
+++ replace build_eat_events -> Result<Vec<EventEnvelope>, ActionRejection> with Ok(vec![Default::default()])
@@ -14,73 +14,17 @@
 
 pub fn build_eat_events(
     state: &PhysicalState,
     agent_state: &AgentState,
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
 ) -> Result<Vec<EventEnvelope>, ActionRejection> {
-    let actor_id = proposal.actor_id.clone().ok_or_else(actor_missing)?;
-    let actor = state.actors.get(&actor_id).ok_or_else(actor_missing)?;
-    let food_supply_id = food_supply_target(proposal)?;
-
-    let Some(food) = state.food_supplies.get(&food_supply_id) else {
-        return Ok(vec![eat_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            food_supply_id.as_str(),
-            "knowledge",
-            "food source absent",
-            "target food supply is not present in physical state",
-        )]);
-    };
-
-    if food.is_empty() {
-        return Ok(vec![eat_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            food_supply_id.as_str(),
-            "resource",
-            "food source empty",
-            "target food supply had zero servings",
-        )]);
-    }
-
-    if let Some(failure) = access_failure(state, food, &actor.actor_id, &actor.current_place_id) {
-        return Ok(vec![eat_failed_event(
-            proposal,
-            ordering_key,
-            content_manifest_id,
-            food_supply_id.as_str(),
-            "access",
-            failure.actor_visible_reason,
-            failure.absence_ancestry,
-        )]);
-    }
-
-    let consumed = food_consumed_event(
-        proposal,
-        ordering_key,
-        content_manifest_id,
-        food,
-        food.servings - 1,
-    );
-    let mut events = vec![consumed];
-    events.extend(eat_need_events(
-        agent_state,
-        proposal,
-        ordering_key,
-        content_manifest_id,
-        &events[0],
-        -food.hunger_reduction_per_serving,
-    ));
-    Ok(events)
+    Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
 }
 
 fn food_consumed_event(
     proposal: &Proposal,
     ordering_key: &OrderingKey,
     content_manifest_id: &ContentManifestId,
     food: &FoodSupplyState,
     servings_after: u32,


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/defs/eat.rs` has changed (1781911446.343924329s, 5s after last build at 1781911441.827924336s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:22:13
    |
 22 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `envelope::EventEnvelope: Default` is not satisfied
   --> crates/tracewake-core/src/actions/defs/eat.rs:22:13
    |
 22 |     Ok(vec![Default::default()]) /* ~ changed by cargo-mutants ~ */
    |             ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `envelope::EventEnvelope`
   --> crates/tracewake-core/src/events/envelope.rs:717:1
    |
717 | pub struct EventEnvelope {
    | ^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
